apps/timeslacker/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: timeslacker
  labels:
    name: timeslacker
